deploy/manifests/namespace-dev.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tickets-dev
  labels:
    name: tickets-dev
    environment: dev
    project: aegistickets
