deploy/manifests/namespace-prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tickets-prod
  labels:
    name: tickets-prod
    environment: prod
    project: aegistickets
